# OTC

./: .dockerignore  .env.example  .env.gateway.example  .env.production.example  .gitignore  CLAUDE.md  Dockerfile  INSTALL.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  ruff.toml  setup.sh  start.sh
.streamlit/: config.toml
config/: constants.py  i18n.py  logging.py  rules.yaml  settings.py  user_config.py  watchlist.yaml
dashboard/: package-lock.json  package.json
hooks/: post-merge
scripts/: clear_mock_data.py  install-hooks.sh  run_dashboard.py  run_system.py  seed_demo_data.py  seed_realistic.py  test_scanner_params.py
shared/: schema.sql
src/alerts/: dispatcher.py  telegram.py
src/analysis/: dilution.py  level2.py  time_sales.py  volume.py
src/broker/: adapter.py  history.py  ibkr.py  mock.py
src/core/: event_bus.py  events.py  models.py  ticker_watcher.py
src/dashboard/: app.py
src/database/: persistence.py  repository.py  schema.py
src/risk/: market_health.py  position.py  stops.py
src/rules/: engine.py
src/scanner/: screener.py  stability.py  universe.py  watchlist.py
tests/: conftest.py  test_alerts.py  test_analysis.py  test_broker.py  test_constants.py  test_event_bus.py  test_i18n.py  test_ibkr_contract.py  test_integration.py  test_models.py  test_persistence.py  test_reconnect_limit.py  test_repository.py  test_risk.py  test_rules.py  test_safe_html.py  test_scanner.py  test_scanner_adapter.py  test_settings.py  test_system.py  test_ticker_watcher.py  test_universe_scanner.py  test_user_config.py
(+31 files in other folders)
