[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atm-trading-engine"
version = "0.1.0"
description = "OTC penny stock ATM pattern decision-support engine"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "structlog>=24.1",
    "sqlalchemy[asyncio]>=2.0",
    "greenlet>=3.0",
    "aiosqlite>=0.20",
    "ib_async>=1.0",
    "python-telegram-bot>=21",
    "prometheus-client>=0.20",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
]
dashboard = [
    "streamlit>=1.30",
]

[tool.setuptools.packages.find]
include = ["config*", "src*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
